2007-11-21  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac.in, m4/acx_blas.m4, m4/acx_lapack.m4,
	m4/acx_fft.m4: Use AS_HELP_STRING macros instead of obsolete
	AC_HELP_STRING ones

	* Makefile.am, autogen.sh, configure.ac.in,
	m4/ac_cxx_extern_template.m4, m4/acx_blas.m4, m4/acx_lapack.m4,
	m4/acx_fft.m4: Renamed "config" directory to "m4" to reflect its
	contents

	* autogen.sh, configure.ac.in: Use "build-aux" directory for
	auxiliary building scripts

	This directory name is suggested in the autoconf manual as a
	standard placeholder for auxiliary build scripts. If this
	directory does not exist, create it before invoking autotools.

	* autogen.sh: On error return the exit code of the failing command

	* autogen.sh: Allow runing autogen.sh using an absolute path

	After checking the necessary tools the script now enters the
	IT++ source directory for the bootstrap process.

	* configure.ac.in: Report all automake warnings and treat them as
	errors

	This should give the maintainer and people building IT++ from SVN
	a better detection of possible bugs in Makefiles.

2007-11-16  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac.in, tests/Makefile.am: Bump autoconf requirement to
	2.60 and use AC_PROG_SED

	The $datarootdir and $docdir variables, which are used for HTML
	documentation installation, were introduced in autoconf 2.60.
	Therefore we need to check for this version. Besides, manual check
	for sed program is now replaced with AC_PROG_SED macro, which
	makes sed as a required dependency. Additionally, gdiff and
	gnudiff are searched as diff replacement.

	* tests/parser_test.cpp: Prevent warnings about string to char*
	conversions

	GCC >=4.2 uses "-Wwrite-string" in when "-Wall" flag is used and
	this results in warnings about deprecated conversions from
	constant strings to char*. This patch workarounds this problem by
	a bit different initialisation of arrays of char* strings.
