@@ -1,5 +1,12 @@
 2007-11-21  Adam Piatyszek  <ediap@users.sourceforge.net>
 
+	* m4/ac_cxx_extern_template.m4: Obsolete macros replaced with the
+	ones recommended by autoconf
+
+	AC_LANG_SAVE + AC_LANG_CPLUSPLUS  ->  AC_LANG_PUSH([C++])
+	AC_LANG_RESTORE  ->  AC_LANG_POP([C++])
+	AC_TRY_COMPILE  ->  AC_COMPILE_IFELSE + AC_LANG_PROGRAM
+
 	* configure.ac.in, m4/acx_blas.m4, m4/acx_lapack.m4,
 	m4/acx_fft.m4: Use AS_HELP_STRING macros instead of obsolete
 	AC_HELP_STRING ones
